--- a/styles/project.scss
+++ b/styles/project.scss
@@ -22,6 +22,12 @@ h2 {
   margin-bottom: $large-space;
 }
 
+.project-subtitle-no-space {
+  font-style: italic;
+  margin-top: 10px;
+  margin-bottom: 18px;
+}
+
 .main-image {
   max-width: 724px; // 872px; or //724px
   width: 100%;
