Style inline links, lists and zoomable images

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,10 +1,12 @@
 @import "library";
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Inconsolata&family=Prosto+One&family=Source+Code+Pro:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Courier+Prime&family=Inconsolata&family=Prosto+One&family=Readex+Pro:wght@300;400&family=Source+Code+Pro:wght@300;400&display=swap");
 @import url("https://use.typekit.net/fcy2fbm.css");
 
 // font-family: 'Courier Prime', monospace;
 // font-family: 'Inconsolata', monospace;
 // font-family: 'Source Code Pro', monospace; --> + lighter 300 weight
+// font-family: 'Readex Pro', sans-serif; --> + lighter 300 weight
+// font-family: 'Anonymous Pro', monospace;
 
 // font-family: courier-std, monospace;
 // font-weight: 400;
@@ -28,7 +30,13 @@ $rainbow-duration: 4s;
   font-style: normal;
   box-sizing: border-box;
 
-  font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
+  // font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
+  //font-family: "Incosolata", courier-std, Courier, monospace; // Alternative: "Inconsolata"
+  // font-family: "Source Code Pro", courier-std, Courier, monospace;
+  // font-family: "Readex Pro", sans-serif;
+  // font-weight: 300;
+  font-family: "Anonymous Pro", monospace;
+
   color: $text-color;
   font-size: $main-font-size;
 }
@@ -116,6 +124,24 @@ a {
   }
 }
 
+.inline-link {
+  display: inline-block;
+  transition: transform 0.3s ease-in-out;
+}
+
+.inline-link:hover {
+  // -moz-transform: translate(-2px, -2px);
+  // -ms-transform: translate(-2px, -2px);
+  // -o-transform: translate(-2px, -2px);
+  // -webkit-transform: translate(-2px, -2px);
+  // transform: translate(-2px, -2px);
+  -moz-transform: translate(0, -3px);
+  -ms-transform: translate(0, -3px);
+  -o-transform: translate(0, -3px);
+  -webkit-transform: translate(0, -3px);
+  transform: translate(0, -3px);
+}
+
 .underline {
   line-height: 1.8;
   padding-bottom: 1em;
@@ -128,6 +154,15 @@ a {
   background-size: 13px 7px;
 
   transition: background-position 0.3s ease;
+}
+
+// Use this to create underlines that are closer to the baseline
+.underline-close {
+  background-position: 2px 1.1em;
+
+  .underline-mask {
+    background-position: 100% 1.1em;
+  }
 }
 
 .underline.pink,
