--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Inconsolata&family=Prosto+One&family=Source+Code+Pro:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Courier+Prime&family=Inconsolata&family=Prosto+One&family=Readex+Pro:wght@300;400&family=Source+Code+Pro:wght@300;400&display=swap");
 @import url("https://use.typekit.net/fcy2fbm.css");
 * {
   color: inherit;
@@ -11,7 +11,7 @@
   font-style: normal;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: courier-std, Courier, monospace;
+  font-family: "Anonymous Pro", monospace;
   color: #f0efef;
   font-size: 18px;
 }
@@ -100,6 +100,19 @@ a[target="_blank"]::after {
   height: 1.1em;
 }
 
+.inline-link {
+  display: inline-block;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+.inline-link:hover {
+  -webkit-transform: translate(0, -3px);
+  transform: translate(0, -3px);
+}
+
 .underline {
   line-height: 1.8;
   padding-bottom: 1em;
@@ -110,6 +123,14 @@ a[target="_blank"]::after {
   background-size: 13px 7px;
   -webkit-transition: background-position 0.3s ease;
   transition: background-position 0.3s ease;
+}
+
+.underline-close {
+  background-position: 2px 1.1em;
+}
+
+.underline-close .underline-mask {
+  background-position: 100% 1.1em;
 }
 
 .underline.pink,
