--- a/styles/index.scss
+++ b/styles/index.scss
@@ -94,7 +94,8 @@ body {
   // font-size: 17px;
 }
 
-p {
+p,
+ul {
   max-width: $main-text-width;
   line-height: 1.2em;
 }
@@ -658,7 +659,8 @@ a:focus .underline-mask,
     font-size: 16px;
   }
 
-  p {
+  p,
+  ul {
     line-height: 1.4em;
   }
 
