--- a/styles/project.scss
+++ b/styles/project.scss
@@ -63,11 +63,11 @@ body {
 
 ul {
   margin-left: 1em;
-  line-height: 1.4em;
 }
 
 li {
   padding-left: 1em;
+  margin-bottom: 1em;
 }
 
 /*========== MODAL ==========*/
