--- a/styles/project.css
+++ b/styles/project.css
@@ -208,6 +208,12 @@ button {
 }
 
 @media only screen and (max-width: 580px) {
+  body {
+    margin-left: 45px;
+    margin-right: 45px;
+    margin-top: 64px;
+    margin-bottom: 40px;
+  }
   .gallery-container {
     -webkit-column-gap: 12px;
             column-gap: 12px;
