--- a/styles/project.css
+++ b/styles/project.css
@@ -60,6 +60,12 @@ body {
   height: auto;
 }
 
+.gi-full {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+}
+
 ul {
   margin-left: 1em;
 }
