--- a/styles/project.css
+++ b/styles/project.css
@@ -60,6 +60,11 @@ body {
   height: auto;
 }
 
+.gallery-container.grid-4 {
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .gi-full {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
@@ -72,7 +77,7 @@ ul {
 
 li {
   padding-left: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0.6em;
 }
 
 /*========== MODAL ==========*/
@@ -210,6 +215,13 @@ button {
     -webkit-column-gap: 16px;
             column-gap: 16px;
     row-gap: 16px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .gallery-container.grid-4 {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
 }
 
