--- a/styles/project.scss
+++ b/styles/project.scss
@@ -59,6 +59,10 @@ body {
     height: auto;
   }
 
+  &.grid-2 {
+    grid-template-columns: 1fr 1fr;
+  }
+
   &.grid-4 {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
