--- a/styles/project.css
+++ b/styles/project.css
@@ -44,8 +44,6 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
   -webkit-column-gap: 22px;
           column-gap: 22px;
   row-gap: 22px;
@@ -69,10 +67,23 @@ body {
       grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+.gallery-container.custom-grid-storylines {
+  -ms-grid-columns: 1.33333333333fr 0.56443148688fr 0.62436868686fr 0.62672811059fr 1fr;
+      grid-template-columns: 1.33333333333fr 0.56443148688fr 0.62436868686fr 0.62672811059fr 1fr;
+}
+
+.gallery-container.custom-grid-storylines img {
+  display: block;
+}
+
 .gi-full {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1 / 4;
+}
+
+.padded-row {
+  margin-bottom: 22px;
 }
 
 ul {
@@ -82,6 +93,11 @@ ul {
 li {
   padding-left: 1em;
   margin-bottom: 0.6em;
+}
+
+video {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /*========== MODAL ==========*/
@@ -154,6 +170,10 @@ li {
   transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
+.zoomable img {
+  display: block;
+}
+
 .zoomable:hover,
 .zoomable:active,
 .zoomable:focus {
@@ -219,6 +239,9 @@ button {
     -webkit-column-gap: 16px;
             column-gap: 16px;
     row-gap: 16px;
+  }
+  .padded-row {
+    margin-bottom: 16px;
   }
 }
 
