--- a/styles/project.css
+++ b/styles/project.css
@@ -12,11 +12,13 @@ h2 {
   font-style: italic;
   margin-top: 10px;
   margin-bottom: 62px;
+  line-height: 1.3em;
 }
 
 .project-subtitle-no-space {
   font-style: italic;
   margin-top: 10px;
+  line-height: 1.3em;
 }
 
 .main-image {
