--- a/styles/project.scss
+++ b/styles/project.scss
@@ -20,11 +20,13 @@ h2 {
   font-style: italic;
   margin-top: 10px;
   margin-bottom: $large-space;
+  line-height: 1.3em;
 }
 
 .project-subtitle-no-space {
   font-style: italic;
   margin-top: 10px;
+  line-height: 1.3em;
 }
 
 .main-image {
