--- a/styles/index.scss
+++ b/styles/index.scss
@@ -490,7 +490,7 @@ a:focus .underline-mask,
   }
 
   40% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   60% {
@@ -536,7 +536,7 @@ a:focus .underline-mask,
   }
 
   40% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   60% {
@@ -558,7 +558,7 @@ a:focus .underline-mask,
   }
 
   20% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   40% {
@@ -580,7 +580,7 @@ a:focus .underline-mask,
 
 @keyframes changeColorFromYellow {
   0% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   20% {
@@ -600,7 +600,7 @@ a:focus .underline-mask,
   }
 
   100% {
-    color: $yellow;
+    color: $yellow-star;
   }
 }
 
@@ -622,7 +622,7 @@ a:focus .underline-mask,
   }
 
   80% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   100% {
@@ -644,7 +644,7 @@ a:focus .underline-mask,
   }
 
   60% {
-    color: $yellow;
+    color: $yellow-star;
   }
 
   80% {
