--- a/styles/_library.scss
+++ b/styles/_library.scss
@@ -14,6 +14,9 @@ $red: #c90d0d;
 $red-no-hash: "c90d0d";
 $yellow: #ffd84d;
 $yellow-no-hash: "ffd84d";
+
+$yellow-star: #c99f0d;
+
 $blue: #57a4ff;
 $blue-no-hash: "57a4ff";
 $green: #0dc941;
