--- a/styles/index.css
+++ b/styles/index.css
@@ -120,14 +120,14 @@ a[target="_blank"]::after {
   color: inherit;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23f0efef;stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
   background-repeat: repeat-x;
-  background-position: 2px 1.3em;
+  background-position: 1px 1.3em;
   background-size: 13px 7px;
   -webkit-transition: background-position 0.3s ease;
   transition: background-position 0.3s ease;
 }
 
 .underline-close {
-  background-position: 2px 1.1em;
+  background-position: 1px 1.1em;
 }
 
 .underline-close .underline-mask {
@@ -165,26 +165,26 @@ a[target="_blank"]::after {
   color: inherit;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#080808), to(#080808));
   background-image: linear-gradient(#080808, #080808);
-  background-repeat: repeat-x;
   background-repeat: no-repeat;
-  background-position: 100% 1.2em;
+  background-position: 110% 1.2em;
+  /* 110% fixes flickering at certain browser widths on Chrome */
   background-size: 100% 100%;
   z-index: 1;
 }
 
 .short-animation {
-  -webkit-transition: background-size 0.3s ease;
-  transition: background-size 0.3s ease;
+  -webkit-transition: background-size 0.4s ease;
+  transition: background-size 0.4s ease;
 }
 
 .med-animation {
-  -webkit-transition: background-size 0.6s ease;
-  transition: background-size 0.6s ease;
+  -webkit-transition: background-size 0.7s ease;
+  transition: background-size 0.7s ease;
 }
 
 .long-animation {
-  -webkit-transition: background-size 1s ease;
-  transition: background-size 1s ease;
+  -webkit-transition: background-size 1.2s ease;
+  transition: background-size 1.2s ease;
 }
 
 .screenreader-text {
@@ -211,11 +211,11 @@ footer div {
 }
 
 a:focus .underline-perm {
-  background-position: 2px 1.5em;
+  background-position: 1px 1.5em;
 }
 
 .underline-perm:hover, .underline-perm:active, .underline-perm:focus {
-  background-position: 2px 1.5em;
+  background-position: 1px 1.5em;
 }
 
 a:hover .underline-mask,
