--- a/styles/project.css
+++ b/styles/project.css
@@ -139,6 +139,10 @@ video {
 }
 
 /*========== MODAL ==========*/
+#modal-container {
+  z-index: 1;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -146,7 +150,6 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
   background-color: rgba(0, 0, 0, 0.75);
   -webkit-box-align: center;
       -ms-flex-align: center;
