--- a/styles/project.scss
+++ b/styles/project.scss
@@ -133,6 +133,11 @@ video {
 }
 
 /*========== MODAL ==========*/
+#modal-container {
+  // display: none;
+  z-index: 1;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -140,13 +145,13 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
   background-color: rgba(0, 0, 0, 0.75);
+  // z-index: 1;
+
   // overflow: auto;
 
   align-items: center;
   justify-content: center;
-  // justify-content: space-between;
 
   flex-direction: column;
 
